<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.noname.task.presentation.screens.charactersdetails.CharctersDetailsFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/charchter_img"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="230dp"
        android:scaleType="fitXY"
        />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charchter_img"
            android:text="name : "
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt"
            android:text="Description : "
            android:textSize="16sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/des_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/comice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des_txt"
            android:text="@string/comics"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

  <android.support.v7.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/rc_comics"
      app:layoutManager="android.support.v7.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf="@+id/comice_title"
      />

        <TextView
            android:id="@+id/series_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_comics"
            android:text="@string/series"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rc_series"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/series_title"
            />

        <TextView
            android:id="@+id/stories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_series"
            android:text="@string/stories"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rc_stories"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/stories_title"
            />

        <TextView
            android:id="@+id/events_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_stories"
            android:text="@string/EVENTS"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rc_events"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/events_title"
            />


        <TextView
            android:id="@+id/related_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_events"
            android:text="@string/related_links"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/details"
            android:gravity="start"
            android:padding="8dp"
            android:drawableEnd="@drawable/arrow_right"
            app:layout_constraintTop_toBottomOf="@+id/related_links"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/wiki"
            android:gravity="start"
            android:padding="8dp"
            android:id="@+id/wiki"
            android:drawableEnd="@drawable/arrow_right"
            app:layout_constraintTop_toBottomOf="@+id/details"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/comik"
            android:gravity="start"
            android:padding="8dp"
            android:id="@+id/comik"
            android:drawableEnd="@drawable/arrow_right"
            app:layout_constraintTop_toBottomOf="@+id/wiki"
            android:layout_marginTop="15dp"
            />

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
